--- a/Python/Programação Back-end/EA3/portaldoaluno/templates/portaldoaluno/pages/listar_usuarios.html
+++ b/Python/Programação Back-end/EA3/portaldoaluno/templates/portaldoaluno/pages/listar_usuarios.html
@@ -1,6 +1,6 @@
 {% extends "global/base.html" %}
 
-{% block title %}Alunos Cadastrados | {% endblock title %}
+{% block title %}Usuarios Cadastrados | {% endblock title %}
 
 {% block content %}
 <div class="main-content main-content-list container">
